improve style and make responsive for screen size

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="../src/index.css">
     <link rel="stylesheet" href="../src/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
 
     <title>Tenzies</title>
