--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Aurele Barbancon">
+    <meta name="copyright" content="Aurele Barbancon 2022. All Rights Reserved.">
+    <meta name="website-name" content="Tenzis">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="../src/Images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="../src/resources/Images/favicon.png">
     <link rel="stylesheet" href="../src/index.css">
     <link rel="stylesheet" href="../src/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+    <meta name="title" content="Tenzies">
 
     <title>Tenzies</title>
   </head>
@@ -17,4 +22,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+
 </html>
